# Only one theme can be installed
# Others are valuable examples though
install-data-local:
	$(MKDIR_P) $(DESTDIR)$(datadir)/themes/Quartz/gtk-2.0
	$(INSTALL_DATA) quartz-theme.gtkrc $(DESTDIR)$(datadir)/themes/Quartz/gtk-2.0/gtkrc

EXTRA_DIST = quartz-theme.gtkrc xamarin-quartz-theme.gtkrc murrine-quarz-theme.gtkrc
